Monir changes, L10n